# BitwiseANDofRange

./: CMakeLists.txt  README.md
inc/: solution.hpp
src/: main.cpp  solution.cpp
